sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:9: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
      if (ecart==10 || ecart=9) ecart=11
                    ^